# CultivaLab

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  tests.yml
api/: dependencies.py  main.py
api/routers/: auth.py  crop_types.py  crops.py  users.py
api/schemas/: auth.py  crop.py  crop_type.py  user.py
architecture/: index.html
data/: database.json
docs/: architecture.md  exceptions.md  getting-started.md  index.md  models-overview.md  services-overview.md  storage.md  tests.md
docs/stylesheets/: extra.css
exceptions/: index.html
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(user)/: layout.tsx
frontend/src/components/: BackgroundGlows.tsx  CultivaLogo.tsx  FormFieldRow.tsx  Header.tsx  Hero.tsx  PageShell.tsx  SiteFooter.tsx
frontend/src/config/: navigation.ts
frontend/src/context/: AuthContext.tsx
getting-started/: index.html
models-overview/: index.html
search/: search_index.json
services-overview/: index.html
src/cultiva-lab/: exceptions.py  models.py  services.py  storage.py
src/cultiva_lab/: cli.py  exceptions.py  models.py  services.py  storage.py  storage_for_supabase.py
src/cultiva_lab/models/: __init__.py  crop.py  crop_type.py  daily_condition.py  user.py
src/cultiva_lab/storage/: supabase_storage.py
storage/: index.html
tests/: index.html  test_services.py  test_storage.py  tests_services.py
(+35 files in other folders)
