[project]
name = "cultivalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "rich>=14.3.2",
    "ruff>=0.15.1",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
